[tool.poetry]
name = "mobile-env"
version = "0.1.0"
description = "mobile-env: A minimalist environment for decision making in wireless mobile networks."
authors = [
    "Stefan Schneider <stefan.schneider@upb.de>",
    "Stefan Werner <stefanwerner1997@mail.upb.de>"
    ]
license = "MIT"
repository = "https://github.com/stefanbschneider/mobile-env"
homepage = "https://github.com/stefanbschneider/mobile-env"
documentation = "https://mobile-env.readthedocs.io/en/latest/?badge=latest"


[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.4"
Shapely = "^1.7.0"
numpy = "^1.2.0"
gym = "^0.17.1"
pygame = "^2.0"
svgpath2mpl = "^1.0.0"

# documentation environment (doc)
sphinx = {version = "^3.1", optional = true}
sphinx-rtd-theme = {version = "^0.4", optional = true}
myst-parser = {version = "^0.15.2", optional = true}


[tool.poetry.dev-dependencies]
tox = "^3.20.1"
pytest = "^6.2.5"
black = "^21.9b0"
flake8 = "^4.0.1"
pylint = "^2.11.1"
stable-baselines3 = "^1.2.0"


[tool.poetry.extras]
docs = [
  "sphinx",
  "sphinx-rtd-theme",
  "myst-parser",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
